# beco

./: .gitignore  CMakeLists.txt  LICENSE  README.md  beco.c  beco.h  mock.c  mock.h
examples/: CMakeLists.txt
examples/hello-world/: CMakeLists.txt  install_win.reg  main.c  manifest.json
examples/simple/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_beco.c  test_mock.c
